--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,12 +29,14 @@ set(SOURCES
     src/main.cpp
     src/Config/Settings.cpp
     src/Hooks/MenuWatcher.cpp
+    src/Utils/BookUtils.cpp
 )
 
 set(HEADERS
     src/PCH.h
     src/Config/Settings.h
     src/Hooks/MenuWatcher.h
+    src/Utils/BookUtils.h
 )
 
 # ---- Create DLL ----
