--- a/Data/SKSE/Plugins/Easy2Read.ini
+++ b/Data/SKSE/Plugins/Easy2Read.ini
@@ -1,33 +1,15 @@
+; Easy2Read Configuration
+; Main settings for the Easy2Read SKSE plugin
+
 [General]
-; Hotkey scancode (default F = 33 decimal, 0x21 hex)
+; Keyboard key code to toggle the overlay (default: 33 = F key)
 ; See https://docs.microsoft.com/en-us/windows/win32/inputdev/virtual-key-codes
+; Common keys:
+;   F = 33 (0x21)
+;   G = 34 (0x22)
+;   H = 35 (0x23)
+;   R = 19 (0x13)
+;   Tab = 9
 ToggleKey = 33
 
-[Font]
-; Font preset: default, dyslexic, or custom
-; - default: Roboto (clean, highly readable)
-; - dyslexic: OpenDyslexic (accessibility font)
-; - custom: Uses CustomFontFile path below
-Font = default
-
-; Path to custom font file (only used when Font = custom)
-; Can be relative to game folder or absolute path
-CustomFontFile = Data/fonts/MyFont.ttf
-
-; Font size in pixels
-FontSize = 18.0
-
-[Window]
-; Window dimensions in pixels
-Width = 600.0
-Height = 400.0
-
-; Background opacity (0.0 = transparent, 1.0 = opaque)
-BackgroundAlpha = 0.95
-
-; Close overlay when clicking outside the window (true/false)
-CloseOnClickOutside = false
-
-; Colors in RGBA hex format
-TextColor = E0E0E0FF
-BackgroundColor = 1A1A1AFF
+; Theming options are in a separate file: Easy2Read_Theme.ini
