Fix font loading, change window size settings

--- a/Data/SKSE/Plugins/Easy2Read_Theme.ini
+++ b/Data/SKSE/Plugins/Easy2Read_Theme.ini
@@ -2,11 +2,12 @@
 ; This file controls the visual appearance of the Easy2Read overlay
 
 [Font]
-; Font preset: Default, Dyslexic, or Custom
-; Default = Skyrim-style font (uses ImGui default)
-; Dyslexic = OpenDyslexic font (requires OpenDyslexic.ttf in Data/SKSE/Plugins/Easy2Read/)
+; Font preset: Sovngarde, Dyslexic, ImGui, or Custom
+; Sovngarde = Skyrim-themed font (default, requires Sovngarde-Bold.ttf in Easy2Read folder)
+; Dyslexic = OpenDyslexic font (requires OpenDyslexic-Regular.otf in Easy2Read folder)
+; ImGui = Built-in ImGui default font (no font file needed)
 ; Custom = Uses the CustomFontFile path below
-FontPreset = Default
+FontPreset = Sovngarde
 
 ; Path to custom font file (only used when FontPreset = Custom)
 ; Path is relative to Skyrim's Data folder
@@ -35,9 +36,9 @@ WindowColorG = 20
 WindowColorB = 25
 
 [Window]
-; Window dimensions in pixels
-Width = 800
-Height = 600
+; Window dimensions as percentage of screen size (0-100)
+WidthPercent = 50
+HeightPercent = 70
 
 ; Window transparency (0-100, where 100 is fully opaque)
 Opacity = 90
