--- a/Data/SKSE/Plugins/Easy2Read_Theme.ini
+++ b/Data/SKSE/Plugins/Easy2Read_Theme.ini
@@ -13,17 +13,19 @@ FontPreset = Sovngarde
 ; Path is relative to Skyrim's Data folder
 CustomFontFile = SKSE/Plugins/Easy2Read/CustomFont.ttf
 
-; Font size in pixels
+; Font size in pixels (for body text)
 FontSize = 24
+
+; Title scale multiplier (1.0 = same as body, 1.2 = 20% larger)
+TitleScale = 1.2
 
 [Colors]
 ; Colors are specified as RGB values (0-255)
-; Format: R,G,B
 
-; Title text color
+; Title text color (warm gold by default)
 TitleColorR = 255
-TitleColorG = 255
-TitleColorB = 255
+TitleColorG = 220
+TitleColorB = 150
 
 ; Body text color
 BodyColorR = 255
@@ -35,6 +37,40 @@ WindowColorR = 20
 WindowColorG = 20
 WindowColorB = 25
 
+; Window border color
+BorderColorR = 80
+BorderColorG = 80
+BorderColorB = 90
+BorderSize = 1.0
+
+; Separator line color (between title and body)
+SeparatorColorR = 100
+SeparatorColorG = 100
+SeparatorColorB = 110
+
+[Scrollbar]
+; Scrollbar background color
+BackgroundColorR = 30
+BackgroundColorG = 30
+BackgroundColorB = 35
+
+; Scrollbar thumb (handle) color
+ThumbColorR = 80
+ThumbColorG = 80
+ThumbColorB = 90
+
+; Scrollbar thumb hover color
+ThumbHoverColorR = 120
+ThumbHoverColorG = 120
+ThumbHoverColorB = 130
+
+; Scrollbar size and style
+Size = 14
+Rounding = 4
+
+; Scroll speed (pixels per scroll wheel tick)
+ScrollSpeed = 50
+
 [Window]
 ; Window dimensions as percentage of screen size (0-100)
 WidthPercent = 50
@@ -42,3 +78,9 @@ HeightPercent = 70
 
 ; Window transparency (0-100, where 100 is fully opaque)
 Opacity = 90
+
+; Window corner rounding in pixels
+Rounding = 8
+
+; Padding inside window in pixels
+Padding = 12
