Beginning of tofu detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set(SOURCES
     src/Hooks/D3D11Hook.cpp
     src/Utils/BookUtils.cpp
     src/Utils/ImageMappings.cpp
+    src/TextSanitization/TextSanitizer.cpp
     src/UI/Overlay.cpp
     src/ImGui/imgui_impl_dx11.cpp
     src/ImGui/imgui_impl_win32.cpp
@@ -46,6 +47,7 @@ set(HEADERS
     src/Hooks/D3D11Hook.h
     src/Utils/BookUtils.h
     src/Utils/ImageMappings.h
+    src/TextSanitization/TextSanitizer.h
     src/UI/Overlay.h
     src/ImGui/imgui_impl_dx11.h
     src/ImGui/imgui_impl_win32.h
