--- a/Data/SKSE/Plugins/Easy2Read.ini
+++ b/Data/SKSE/Plugins/Easy2Read.ini
@@ -12,4 +12,22 @@
 ;   Tab = 9
 ToggleKey = 33
 
+[TextSanitization]
+; Enable text sanitization to replace unsupported Unicode characters (tofu)
+Enable = true
+
+; Mode options:
+;   AnyASCII   - Replace unsupported characters with ASCII equivalents
+;   DetectOnly - Log unsupported characters but don't modify text
+;   Off        - Disable text sanitization entirely
+Mode = AnyASCII
+
+; Log all character replacements to Easy2Read.log (for debugging)
+LogReplacements = false
+
+; Maximum string expansion ratio (prevents pathological cases)
+; A value of 3.0 means output can be at most 3x the input length
+MaxExpansionRatio = 3.0
+
 ; Theming options are in a separate file: Easy2Read_Theme.ini
+
