Expanded config support

--- a/Data/SKSE/Plugins/Easy2Read.ini
+++ b/Data/SKSE/Plugins/Easy2Read.ini
@@ -22,12 +22,37 @@ Enable = true
 ;   Off        - Disable text sanitization entirely
 Mode = AnyASCII
 
-; Log all character replacements to Easy2Read.log (for debugging)
+; Enable debug mode - logs verbose sanitization info to Easy2Read.log
+; Useful for troubleshooting which characters are being replaced
+DebugMode = false
+
+; Log all character replacements to Easy2Read.log
 LogReplacements = false
 
 ; Maximum string expansion ratio (prevents pathological cases)
 ; A value of 3.0 means output can be at most 3x the input length
 MaxExpansionRatio = 3.0
 
-; Theming options are in a separate file: Easy2Read_Theme.ini
+[TextSanitization.Hooks]
+; Enable/disable individual text sanitization hooks
+; Set to false to disable a specific hook if it causes issues
 
+; DESC/CNAM records (books, items, spells, perks)
+EnableDescriptionHook = true
+
+; Dialogue subtitles (INFO NAM1)
+EnableDialogueHook = true
+
+; Dialogue menu options (DIAL FULL, INFO RNAM)
+EnableDialogueMenuHook = true
+
+; Quest journal descriptions (QUST CNAM)
+EnableQuestHook = true
+
+; Map marker names - detection only (REFR FULL)
+EnableMapMarkerHook = true
+
+; NPC names - detection only (NPC FULL)
+EnableNpcNameHook = true
+
+; Theming options are in a separate file: Easy2Read_Theme.ini
