--- a/Data/SKSE/Plugins/Easy2Read.ini
+++ b/Data/SKSE/Plugins/Easy2Read.ini
@@ -2,6 +2,9 @@
 ; Main settings for the Easy2Read SKSE plugin
 
 [General]
+; Enable the book overlay feature (set to false to disable overlay entirely)
+EnableOverlay = true
+
 ; Keyboard key code to toggle the overlay (default: 33 = F key)
 ; See https://docs.microsoft.com/en-us/windows/win32/inputdev/virtual-key-codes
 ; Common keys:
@@ -11,6 +14,17 @@
 ;   R = 19 (0x13)
 ;   Tab = 9
 ToggleKey = 33
+
+; Controller button to toggle the overlay (default: 0x8000 = Y button)
+; Common Xbox controller button codes (may vary by controller):
+;   Y = 0x8000 (32768)
+;   B = 0x2000 (8192)
+;   A = 0x1000 (4096)
+;   X = 0x4000 (16384)
+ControllerToggleButton = 32768
+
+; Scroll speed when using controller right thumbstick (default: 5.0)
+ControllerScrollSpeed = 5.0
 
 [TextSanitization]
 ; Enable text sanitization to replace unsupported Unicode characters (tofu)
