Updated readme, adjusted setting labels

--- a/Data/SKSE/Plugins/Easy2Read.ini
+++ b/Data/SKSE/Plugins/Easy2Read.ini
@@ -31,10 +31,10 @@ ControllerScrollSpeed = 5.0
 Enable = true
 
 ; Mode options:
-;   AnyASCII   - Replace unsupported characters with ASCII equivalents
+;   On         - Replace unsupported characters with ASCII equivalents
 ;   DetectOnly - Log unsupported characters but don't modify text
 ;   Off        - Disable text sanitization entirely
-Mode = AnyASCII
+Mode = On
 
 ; Enable debug mode - logs verbose sanitization info to Easy2Read.log
 ; Useful for troubleshooting which characters are being replaced
