Generate pdb, update changelog

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.21)
 
 # ---- Project Configuration ----
 set(PROJECT_NAME "Easy2Read")
-set(PROJECT_VERSION 1.0.0)
+set(PROJECT_VERSION 1.2.2)
 
 # CommonLib NG CMake setup
 set(CMAKE_CXX_STANDARD 23)
@@ -116,5 +116,33 @@ if(MSVC)
             /Zc:preprocessor
             /EHsc
             /utf-8      # Required for fmt library Unicode support
+            /Zi         # Generate debug info for all configurations
+    )
+    
+    # Generate PDB for Release builds
+    target_link_options(${PROJECT_NAME}
+        PRIVATE
+            /DEBUG      # Generate PDB
+            /OPT:REF    # Optimize references
+            /OPT:ICF    # COMDAT folding
+    )
+    
+    # Set PDB output name
+    set_target_properties(${PROJECT_NAME} PROPERTIES
+        COMPILE_PDB_NAME ${PROJECT_NAME}
+        PDB_NAME ${PROJECT_NAME}
+    )
+endif()
+
+# ---- Copy PDB to mods folder ----
+if(DEFINED ENV{SKYRIM_MODS_FOLDER} AND MSVC)
+    set(MOD_FOLDER "$ENV{SKYRIM_MODS_FOLDER}/${PROJECT_NAME}")
+    
+    add_custom_command(
+        TARGET ${PROJECT_NAME}
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different "$<TARGET_PDB_FILE:${PROJECT_NAME}>" "${MOD_FOLDER}/SKSE/Plugins/"
+        COMMENT "Copying Easy2Read.pdb to ${MOD_FOLDER}/SKSE/Plugins/"
+        VERBATIM
     )
 endif()
