Attempt at type filtering

--- a/Data/SKSE/Plugins/Easy2Read.ini
+++ b/Data/SKSE/Plugins/Easy2Read.ini
@@ -47,6 +47,11 @@ LogReplacements = false
 ; A value of 3.0 means output can be at most 3x the input length
 MaxExpansionRatio = 3.0
 
+; Safe mode - limits description hook to only process Book forms (enabled by default)
+; When enabled, prevents crashes with Race, Message, and other problematic form types
+; Set to false to process all form types (may cause crashes with certain mods)
+SafeMode = true
+
 [TextSanitization.Hooks]
 ; Enable/disable individual text sanitization hooks
 ; Set to false to disable a specific hook if it causes issues
