Expanded theme support

--- a/Data/SKSE/Plugins/Easy2Read_Theme.ini
+++ b/Data/SKSE/Plugins/Easy2Read_Theme.ini
@@ -76,11 +76,42 @@ ScrollSpeed = 50
 WidthPercent = 50
 HeightPercent = 70
 
-; Window transparency (0-100, where 100 is fully opaque)
-Opacity = 90
-
 ; Window corner rounding in pixels
 Rounding = 8
 
 ; Padding inside window in pixels
 Padding = 12
+
+[Visibility]
+; Toggle visibility of UI elements (true/false)
+
+; Show the book title at the top of the overlay
+ShowTitle = true
+
+; Show the separator line between title and body text
+ShowSeparator = true
+
+; Show the window border
+ShowBorder = true
+
+; Show the scrollbar track/background
+ShowScrollbarTrack = true
+
+[Transparency]
+; Per-element transparency (0-100, where 100 is fully opaque)
+; Note: Text transparency is not configurable - text always renders at full opacity
+
+; Window background transparency
+WindowAlpha = 90
+
+; Border transparency
+BorderAlpha = 100
+
+; Separator line transparency
+SeparatorAlpha = 100
+
+; Scrollbar track/background transparency
+ScrollbarTrackAlpha = 100
+
+; Scrollbar thumb (handle) transparency
+ScrollbarThumbAlpha = 100
