--- a/Presets/Untarnished UI/SKSE/Plugins/Easy2Read_Theme.ini
+++ b/Presets/Untarnished UI/SKSE/Plugins/Easy2Read_Theme.ini
@@ -14,7 +14,7 @@ FontPreset = Custom
 CustomFontFile = SKSE/Plugins/Easy2Read/FuturaPTMedium.otf
 
 ; Font size in pixels (for body text)
-FontSize = 36
+FontSize = 30
 
 ; Title scale multiplier (1.0 = same as body, 1.2 = 20% larger)
 TitleScale = 1.2
@@ -50,9 +50,9 @@ SeparatorColorB = 255
 
 [Scrollbar]
 ; Scrollbar background color
-BackgroundColorR = 0
-BackgroundColorG = 0
-BackgroundColorB = 0
+BackgroundColorR = 150
+BackgroundColorG = 150
+BackgroundColorB = 150
 
 ; Scrollbar thumb (handle) color
 ThumbColorR = 255
@@ -76,11 +76,42 @@ ScrollSpeed = 50
 WidthPercent = 50
 HeightPercent = 70
 
-; Window transparency (0-100, where 100 is fully opaque)
-Opacity = 90
-
 ; Window corner rounding in pixels
 Rounding = 0
 
 ; Padding inside window in pixels
-Padding = 12
+Padding = 20
+
+[Visibility]
+; Toggle visibility of UI elements (true/false)
+
+; Show the book title at the top of the overlay
+ShowTitle = true
+
+; Show the separator line between title and body text
+ShowSeparator = true
+
+; Show the window border
+ShowBorder = false
+
+; Show the scrollbar track/background
+ShowScrollbarTrack = false
+
+[Transparency]
+; Per-element transparency (0-100, where 100 is fully opaque)
+; Note: Text transparency is not configurable - text always renders at full opacity
+
+; Window background transparency
+WindowAlpha = 80
+
+; Border transparency
+BorderAlpha = 80
+
+; Separator line transparency
+SeparatorAlpha = 80
+
+; Scrollbar track/background transparency
+ScrollbarTrackAlpha = 100
+
+; Scrollbar thumb (handle) transparency
+ScrollbarThumbAlpha = 100
