Better language support

--- a/Presets/Untarnished UI/SKSE/Plugins/Easy2Read_Theme.ini
+++ b/Presets/Untarnished UI/SKSE/Plugins/Easy2Read_Theme.ini
@@ -19,6 +19,14 @@ FontSize = 30
 ; Title scale multiplier (1.0 = same as body, 1.2 = 20% larger)
 TitleScale = 1.2
 
+; Language/Unicode support level - controls which character sets are loaded
+; Higher levels use more RAM but support more languages
+; Latin = Basic Latin only (~0.5 MB) - English, basic Western European
+; European = Latin + Cyrillic + Greek (~2-4 MB) - Full European language support (default)
+; Asian = European + CJK common (~10-20 MB) - Chinese/Japanese/Korean common characters
+; Full = All available glyphs (~50-100 MB) - Maximum Unicode coverage
+LanguageSupport = European
+
 [Colors]
 ; Colors are specified as RGB values (0-255)
 
